# LLVM-Memory-Access-Pattern-Analysis

./: CMakeLists.txt
include/: MemoryAccessPatterns.h
src/: newmemory.cpp
testing/: test.c  test.ll  test1.c  test1.ll  test2.ll  test3.ll  test4.ll  test5.ll  test6.ll  test7.ll
